fix: z-index table

--- a/src/styles/page-composition/wrappers.css
+++ b/src/styles/page-composition/wrappers.css
@@ -84,6 +84,7 @@
     }
 
     & .m__table-filters {
+      z-index: 10;
       margin-bottom: 0;
       flex: 1;
       display: grid;
@@ -287,6 +288,7 @@
   }
 
   th {
+    z-index: 1;
     top: 0px;
     background-color: var(--m__bg-surface-color);
   }
